Intellisense suggestion improvements